<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.garytokman.g_tokman_lab1.MainActivity"
    android:weightSum="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:id="@+id/input_textView"
        android:textAlignment="textEnd"
        tools:text="0"
        android:nestedScrollingEnabled="true"
        android:maxLength="7"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/_7"
                android:id="@+id/button_7"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <Button
                android:text="@string/_8"
                android:id="@+id/button_8"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <Button

                android:text="@string/_9"
                android:id="@+id/button_9"
                android:theme="@style/NumbersTheme"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="0.25"/>

            <Button
                android:text="@string/divide"
                android:id="@+id/button_15"
                android:theme="@style/OperationsTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button

                android:text="@string/_4"
                android:id="@+id/button_4"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

            <Button
                android:theme="@style/NumbersTheme"
                android:text="@string/_5"
                android:layout_weight="0.25"
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


            <Button
                android:text="@string/_6"
                android:id="@+id/button_6"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

            <Button
                android:text="@string/multi_text"
                android:id="@+id/button_14"
                android:layout_weight="0.25"
                android:theme="@style/OperationsTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/_1"
                android:id="@+id/button_1"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button

                android:text="@string/_2"
                android:id="@+id/button_2"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:text="@string/_3"
                android:id="@+id/button_3"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:theme="@style/OperationsTheme"
                android:text="@string/minus"
                android:id="@+id/button_13"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/clear_text"
                android:id="@+id/button_10"
                android:theme="@style/clearTheme"
                android:layout_weight="0.25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:text="@string/_0"
                android:id="@+id/button_0"
                android:layout_weight="0.25"
                android:theme="@style/NumbersTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:theme="@style/equalsTheme"
                android:text="@string/equals_text"
                android:id="@+id/button_11"
                android:layout_weight="0.25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:theme="@style/OperationsTheme"
                android:text="@string/plus_text"
                android:layout_weight="0.25"
                android:id="@+id/button_12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
